# TumorImagingBench

./: .gitignore  README.md  pyproject.toml
evaluation/: base_feature_extractor.py  c4c_kits_feature_extractor.py  colorectal_feature_extractor.py  dlcs_feature_extractor.py  extract_all.sh  lndb_feature_extractor.py  luna_feature_extractor.py  nsclc_radiogenomics_feature_extractor.py  nsclc_radiomics_feature_extractor.py
models/: __init__.py  ct_clip_vit.py  ct_clip_vit_extractor.py  ct_fm_extractor.py  fmcib.py  fmcib_extractor.py  medimageinsight.py  medimageinsight_extractor.py  merlin_extractor.py  modelsgen_extractor.py  pasta.py  pyramid_extractor.py  suprem_extractor.py  vista3d_extractor.py  voco_extractor.py
notebooks/: c4c_kits_modelling.ipynb  colorectal_liver_metastases_modelling.ipynb  dlcs_modelling.ipynb  lndb_modelling.ipynb  lndb_preprocessing_visualization.ipynb  luna_extractor.ipynb  luna_modelling.ipynb  luna_preprocessing_visualization.ipynb  modelling_utils.py  nsclc_radiogenomics_modelling.ipynb  nsclc_radiomics_modelling.ipynb  readii_modelling.ipynb  test_models.ipynb
notebooks/analysis/: overall_analysis.ipynb  robustness_analysis.ipynb  saliency_analysis.ipynb
notebooks/modelling/: c4c_kits_modelling.ipynb  colorectal_liver_metastases_modelling.ipynb  dlcs_modelling.ipynb  (+3 more)
pyramid_pretraining/: visualize_data_transforms.ipynb
scripts/: generate_saliency_maps.py  test_inference.py
tutorials/: 00_getting_started.ipynb  01_model_integration.ipynb  02_feature_extractor_guide.ipynb  02_feature_extractor_guide.md  README.md
(+51 files in other folders)
