[project]
name = "tumorimagingbench"
version = "0.1.2"
description = "A package for tumor imaging feature extraction and benchmarking."
authors = [
    { name = "Suraj Pai", email = "bspai@bwh.harvard.edu" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch",
    "pandas>=1.5.3,<2.0.0",
    "numpy",
    "scikit-learn",
    "transformers",
    "multiprocess",
    "huggingface-hub",
    "monai",
    "itk",
    "merlin-vlm",
    "foundation-cancer-image-biomarker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tumorimagingbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
prerelease = "allow"

